fix(container): démarrage tolérant, persistance vectorielle et cohérence des stockages
L'index vectoriel n'a jamais été persisté : le volume ChromaDB montait
/chroma/chroma, chemin abandonné depuis Chroma 0.5.x, tandis que l'image écrit
dans /data. Le volume restait vide et l'index vivait dans la couche inscriptible
du conteneur — détruit à chaque « docker compose down », sans même « -v », et
sans un message. Les deux volumes nommés étaient vérifiés vides (4 Ko) après
45 min de stack déclarant 372 chunks en GED.

Corrections principales :

- ChromaDB monte ./data/chroma:/data. Même bind-mount que la base H2 et l'index
  FTS : un seul cycle de vie, une seule sauvegarde. Vérifié par destruction et
  recréation du conteneur, les chunks survivent.
- Image chromadb épinglée sur 1.5.9 (compose, k8s, Testcontainers) : « latest »
  est précisément ce qui a laissé le chemin de persistance dériver en silence.
- llm-chat-entrypoint.sh : ${CHILD:-} au lieu de ${CHILD}. Sous « set -u », un
  modèle absent tuait le conteneur un intervalle après le boot, donc un crashloop
  via « restart: unless-stopped » — l'inverse du démarrage tolérant introduit par
  de9827e.
- llama-autostart.sh : « || true » sur l'extraction de MemAvailable, qui sous
  pipefail interrompait le script sans message.
- AppConfig : plafond de tampon de 16 Mo sur les quatre WebClient LLM qui n'en
  avaient aucun. Le client d'embedding échouait à 256 Ko, rendant INATTEIGNABLE
  le défaut applicatif embedding-batch-size=32 ; l'ingestion n'indexait alors
  aucun chunk. Taille de lot unifiée à 32 entre application.yml et Compose, où
  trois valeurs divergentes cohabitaient (32 / 10 / 5).
- StartupOrchestrator : le repli résolvait l'ALIAS du modèle comme un nom de
  fichier, déclarant le GGUF manquant à chaque démarrage même présent, ce qui
  déclenchait un téléchargement de plusieurs Go. Et quel que soit le fichier
  absent, c'est le dépôt par défaut en dur qui était installé, avec
  autoActivate=true — un autre modè